--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sass-embedded": "^1.79.3",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
+    "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^2.0.21"
   }
 }
